[gd_scene load_steps=6 format=3 uid="uid://bvw568xtdo4y0"]

[ext_resource type="Script" uid="uid://dwv7n0ju0qsbx" path="res://Objects/Scripts/Doors/door.gd" id="1_gelm1"]
[ext_resource type="Texture2D" uid="uid://bgaa836icoqgk" path="res://assets/Tileset/Door.png" id="1_v46u3"]
[ext_resource type="FontFile" uid="uid://bgx8gu7aobui5" path="res://assets/Fonts/pixel_font.ttf" id="3_sc6el"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v46u3"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sc6el"]
size = Vector2(16, 20)

[node name="Door" type="StaticBody2D"]
script = ExtResource("1_gelm1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_v46u3")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_v46u3")
debug_color = Color(0.7, 0, 0.0116665, 0.419608)

[node name="Button" type="Button" parent="."]
visible = false
texture_filter = 5
offset_left = -12.0
offset_top = 8.0
offset_right = 12.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("3_sc6el")
theme_override_font_sizes/font_size = 4

[node name="DA" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DA"]
shape = SubResource("RectangleShape2D_sc6el")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="body_entered" from="DA" to="." method="_on_da_body_entered"]
[connection signal="body_exited" from="DA" to="." method="_on_da_body_exited"]
